--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
             // Obtener vuelos reales desde AviationStack
             static fetchRealFlights() {
-                const url = `http://api.aviationstack.com/v1/flights?access_key=${API_KEY}&dep_iata=CUN`;
+                const url = `http://api.aviationstack.com/v1/flights?access_key=57aace98567be4f24ac10edd56776d28&dep_iata=CUN`;
                 
                 fetch(url)
                     .then(response => response.json())
