--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
             // Obtener vuelos reales desde AviationStack
             static fetchRealFlights() {
-                const url = `http://api.aviationstack.com/v1/flights?access_key=${API_KEY}&dep_iata=CUN`;
+                const url = `https://api.aviationstack.com/v1/flights?access_key=${API_KEY}&dep_iata=CUN`;
                 
                 fetch(url)
                     .then(response => response.json())
