--- a/index.html
+++ b/index.html
@@ -7,94 +7,90 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        :root {
-            --primary-color: #00bcd4;
-            --secondary-color: #4caf50;
-            --background-color: #121212;
-            --text-color: #e0e0e0;
-            --card-bg: #1f1f1f;
-            --highlight-color: #ff4081;
-            --border-radius: 12px;
-        }
-
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: var(--background-color);
-            color: var(--text-color);
             margin: 0;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            padding: 0;
+            background-color: #121212;
+            color: #fff;
         }
 
         .container {
-            width: 100%;
-            max-width: 1400px;
             display: flex;
-            justify-content: space-between;
-            gap: 2rem;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            overflow-y: auto;
+            padding: 20px;
         }
 
         .panel {
-            background: var(--card-bg);
-            border-radius: var(--border-radius);
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
+            background-color: #1d1d1d;
+            border-radius: 10px;
             padding: 20px;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
+            width: 80%;
+            max-width: 1200px;
+            margin: 20px 0;
         }
 
-        h1, h2 {
-            font-weight: 600;
-            color: var(--primary-color);
+        .panel h1 {
+            font-size: 24px;
+            color: #fff;
+            margin-bottom: 20px;
+            text-align: center;
         }
 
         .time-box {
             display: flex;
             justify-content: space-between;
-            align-items: center;
-            padding: 1rem;
-            margin: 1rem 0;
-            background: #2c2c2c;
-            border-radius: var(--border-radius);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+            margin: 10px 0;
+            font-size: 18px;
         }
 
-        .flights-container {
+        .highlight {
+            background-color: #03a9f4;
+            border-radius: 5px;
+            padding: 10px;
+        }
+
+        .highlight span {
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .flight-list {
             display: flex;
-            justify-content: space-between;
-            gap: 1.5rem;
-            margin-top: 1.5rem;
-        }
-
-        .flight-section {
-            width: 48%;
+            flex-direction: column;
+            gap: 10px;
         }
 
         .flight-card {
-            background: var(--background-color);
-            padding: 1rem;
-            margin: 0.5rem 0;
-            border-radius: var(--border-radius);
             display: flex;
             justify-content: space-between;
+            background-color: #333;
+            padding: 10px;
+            border-radius: 8px;
             align-items: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
         }
 
         .flight-info {
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
         }
 
-        .flight-status {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
+        .flight-number {
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        .route {
+            font-size: 14px;
+        }
+
+        .time {
+            font-size: 14px;
+            color: #03a9f4;
         }
 
         .status-indicator {
@@ -103,82 +99,42 @@
             border-radius: 50%;
         }
 
+        .status-on-time {
+            background-color: #4caf50;
+        }
+
+        .status-delayed {
+            background-color: #ff9800;
+        }
+
+        .status-canceled {
+            background-color: #f44336;
+        }
+
         .controls {
             display: flex;
-            gap: 1rem;
-            margin-bottom: 1rem;
+            justify-content: space-between;
+            margin-bottom: 20px;
         }
 
-        button {
-            padding: 0.5rem 1.5rem;
-            background: var(--primary-color);
-            color: white;
+        .controls button {
+            padding: 10px;
+            background-color: #03a9f4;
             border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        button:hover {
-            background: var(--highlight-color);
-        }
-
-        .flight-number {
-            font-weight: 600;
-        }
-
-        .route {
-            font-size: 0.9rem;
-            color: #b0b0b0;
-        }
-
-        .time {
-            font-size: 1.5rem;
-            color: var(--primary-color);
-        }
-
-        .highlight {
-            background: var(--secondary-color);
-        }
-
-        .time-zone {
-            font-weight: 500;
-        }
-
-        .dark-mode {
-            background-color: #000;
+            border-radius: 5px;
             color: #fff;
+            cursor: pointer;
         }
 
-        .dark-mode button {
-            background: #333;
-        }
-
-        @keyframes slideIn {
-            from {
-                opacity: 0;
-                transform: translateX(-30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-
-        @media (max-width: 1200px) {
-            .container {
-                flex-direction: column;
-            }
-            .flights-container {
-                flex-direction: column;
-            }
+        .controls button:hover {
+            background-color: #0288d1;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="panel">
-            <h1>Horarios Operacíon</h1>
+            <h1>Horarios Operación</h1>
             <div class="time-box">
                 <span>🇲🇽 San José del Cabo</span>
                 <span id="San-Jose-del-Cabo" class="time"></span>
@@ -262,27 +218,35 @@
                     const isArrival = flight.arrival && flight.arrival.iata;
                     const isDeparture = flight.departure && flight.departure.iata;
 
-                    // Verificar que haya información válida de vuelo
+                    // Verificación de que tenga datos completos de vuelo
                     if (flight.flight && flight.flight.iata && (isArrival || isDeparture)) {
-                        const card = document.createElement('div');
-                        card.className = 'flight-card';
-                        card.innerHTML = `
-                            <div class="flight-info">
-                                <div class="flight-number">${flight.flight.iata || 'Desconocido'}</div>
-                                <div class="route">
-                                    ${isDeparture ? `${flight.departure.iata} → CUN` : `CUN → ${flight.arrival.iata}`}
-                                </div>
-                                <div class="time">${flight.departureestimated || flight.arrivalestimated || 'Hora desconocida'}</div>
-                            </div>
-                            <div class="flight-status">
-                                <div class="status-indicator status-${flight.flight_status || 'unknown'}"></div>
-                            </div>
-                        `;
+                        const departureTime = flight.departure ? flight.departure.estimatedArrival : null;
+                        const arrivalTime = flight.arrival ? flight.arrival.estimatedArrival : null;
 
-                        if (isDeparture) {
-                            departures.appendChild(card);
-                        } else if (isArrival) {
-                            arrivals.appendChild(card);
+                        // Verificación de que las horas de llegada o salida no estén vacías
+                        if (departureTime || arrivalTime) {
+                            const card = document.createElement('div');
+                            card.className = 'flight-card';
+                            card.innerHTML = `
+                                <div class="flight-info">
+                                    <div class="flight-number">${flight.flight.iata || 'Desconocido'}</div>
+                                    <div class="route">
+                                        ${isDeparture ? `${flight.departure.iata} → CUN` : `CUN → ${flight.arrival.iata}`}
+                                    </div>
+                                    <div class="time">${departureTime || arrivalTime || 'Hora desconocida'}</div>
+                                </div>
+                                <div class="flight-status">
+                                    <div class="status-indicator status-${flight.flight_status || 'unknown'}"></div>
+                                </div>
+                            `;
+
+                            if (isDeparture) {
+                                departures.appendChild(card);
+                            } else if (isArrival) {
+                                arrivals.appendChild(card);
+                            }
+                        } else {
+                            console.warn('Vuelo sin hora de llegada o salida:', flight);
                         }
                     } else {
                         console.warn('Vuelo con datos incompletos o inválidos:', flight);
