--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel Customer Service</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -13,95 +12,108 @@
             padding: 0;
             background-color: #121212;
             color: #fff;
-        }
-
-        .container {
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
             height: 100vh;
-            overflow-y: auto;
-            padding: 20px;
+            overflow: hidden;
+        }
+
+        .container {
+            text-align: center;
+            width: 90%;
+            max-width: 1200px;
+        }
+
+        h1 {
+            font-size: 42px;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            background: linear-gradient(90deg, #03a9f4, #00e676);
+            -webkit-background-clip: text;
+            color: transparent;
+            text-shadow: 0 0 20px rgba(3, 169, 244, 0.5);
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         .panel {
             background-color: #1d1d1d;
-            border-radius: 10px;
-            padding: 20px;
-            width: 80%;
-            max-width: 1200px;
-            margin: 20px 0;
+            border-radius: 12px;
+            padding: 25px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease-in-out;
         }
 
-        .panel h1 {
-            font-size: 24px;
-            color: #fff;
-            margin-bottom: 20px;
-            text-align: center;
+        .panel:hover {
+            transform: scale(1.02);
         }
 
         .time-box {
             display: flex;
             justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+            font-size: 22px;
+            border-radius: 8px;
+            background: #282828;
+            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
             margin: 10px 0;
-            font-size: 18px;
+        }
+
+        .time-box:hover {
+            background: #03a9f4;
+            color: #fff;
+            transform: scale(1.05);
         }
 
         .highlight {
-            background-color: #03a9f4;
-            border-radius: 5px;
-            padding: 10px;
+            background: linear-gradient(90deg, #03a9f4, #00e676);
+            font-weight: bold;
+            box-shadow: 0 4px 10px rgba(3, 169, 244, 0.4);
         }
 
-        .highlight span {
-            font-weight: bold;
-            font-size: 20px;
+        @media (max-width: 768px) {
+            h1 { font-size: 28px; }
+            .time-box { font-size: 18px; padding: 12px; }
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <h1>Horarios Operación</h1>
         <div class="panel">
-            <h1>Horarios Operación</h1>
-            <div class="time-box">
-                <span>🇲🇽 San José del Cabo</span>
-                <span id="San-Jose-del-Cabo" class="time"></span>
-            </div>
-            <div class="time-box">
-                <span>🇲🇽 Puerto Vallarta</span>
-                <span id="Puerto-Vallarta" class="time"></span>
-            </div>
-            <div class="time-box">
-                <span>🇩🇴 Punta Cana</span>
-                <span id="Punta-Cana" class="time"></span>
-            </div>
-            <div class="time-box highlight">
-                <span>🇲🇽 Cancún (CUN)</span>
-                <span id="Cancun" class="time"></span>
-            </div>
+            <div class="time-box" id="San-Jose-del-Cabo">🇲🇽 San José del Cabo <span class="time"></span></div>
+            <div class="time-box" id="Puerto-Vallarta">🇲🇽 Puerto Vallarta <span class="time"></span></div>
+            <div class="time-box" id="Punta-Cana">🇩🇴 Punta Cana <span class="time"></span></div>
+            <div class="time-box highlight" id="Cancun">🇲🇽 Cancún (CUN) <span class="time"></span></div>
         </div>
     </div>
 
     <script>
-        // Código JavaScript para actualizar la hora
-        const timeElements = document.querySelectorAll('.time');
-        const locations = ['San-Jose-del-Cabo', 'Puerto-Vallarta', 'Punta-Cana', 'Cancun'];
+        const locations = {
+            'San-Jose-del-Cabo': 'America/Mazatlan',
+            'Puerto-Vallarta': 'America/Mexico_City',
+            'Punta-Cana': 'America/Santo_Domingo',
+            'Cancun': 'America/Cancun'
+        };
 
         function updateTime() {
-            locations.forEach(location => {
-                const timeElement = document.getElementById(location);
-                const date = new Date();
-                const options = { timeZone: location, hour: 'numeric', minute: 'numeric' };
-                const formattedTime = date.toLocaleTimeString('es-MX', options);
-                timeElement.textContent = formattedTime;
+            Object.keys(locations).forEach(id => {
+                const timeZone = locations[id];
+                const timeElement = document.getElementById(id).querySelector('.time');
+                const date = new Date().toLocaleTimeString('es-MX', { timeZone, hour: '2-digit', minute: '2-digit', hour12: false });
+                timeElement.textContent = date;
             });
         }
 
-        // Actualiza la hora cada segundo
         setInterval(updateTime, 1000);
-
-        // Llama a updateTime para mostrar la hora inicial
         updateTime();
     </script>
 </body>
